<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_splash_bg_blue"
    tools:context=".views.InstructionActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24dp"
        android:layout_marginStart="@dimen/_16dp"
        android:fontFamily="@font/poppins_regular_black"
        android:text="@string/instruction"
        android:textColor="@color/white"
        android:textStyle="normal"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/_16dp"
        android:layout_marginRight="@dimen/_16dp"
        app:cardCornerRadius="@dimen/_8dp"
        app:cardElevation="@dimen/_6dp"
        android:layout_marginBottom="@dimen/_12dp"
        app:layout_constraintBottom_toTopOf="@+id/ll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.050000012">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/_32dp">

            <TextView
                android:id="@+id/txt_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp"
                android:fontFamily="@font/poppins_regular_black"
                android:text="@string/read_instructions"
                android:textColor="@color/txt_blu"
                android:textStyle="normal"
                android:textSize="@dimen/_16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_instructions"
                android:layout_below="@+id/txt_read"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"
                tools:listitem="@layout/item_instructions" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="@dimen/_48dp"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_weight="1"
            android:background="@drawable/ic_btn_bg"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/registration"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_authenticate"
            android:layout_width="0dp"
            android:layout_height="@dimen/_48dp"
            android:layout_marginLeft="@dimen/_16dp"
            android:layout_marginRight="@dimen/_16dp"
            android:layout_weight="1"
            android:background="@drawable/ic_btn_bg"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/authenticate"
            android:textColor="@color/white" />


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
</layout>