<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

            <variable
                name="viewModel"
                type="com.developer.facescan.viewmodel.RegisterViewModel" />
        </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_splash_bg_blue"
        tools:context=".views.RegisterActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24dp"
            android:layout_marginStart="@dimen/_16dp"
            android:fontFamily="@font/poppins_regular_black"
            android:text="@string/registration"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:textSize="@dimen/_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_16dp"
            android:layout_marginRight="@dimen/_16dp"
            app:cardCornerRadius="@dimen/_8dp"
            app:cardElevation="@dimen/_6dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.050000012">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_12dp"
                android:layout_marginRight="@dimen/_12dp"
                android:paddingBottom="@dimen/_48dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_fName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_20dp"
                    android:background="@drawable/stroke_bg"

                    android:gravity="center_vertical"
                    android:hint="@string/first_name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:paddingStart="@dimen/_12dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="#808080"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_mName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    android:visibility="gone"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_16dp"
                    android:background="@drawable/stroke_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/middle_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingStart="@dimen/_12dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="#808080"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_fName" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_lName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_16dp"
                    android:background="@drawable/stroke_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/last_name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:paddingStart="@dimen/_12dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="#808080"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_mName" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/sp_gender"
                    style="@style/SpinnerTheme"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:background="@drawable/stroke_bg"
                    app:layout_constraintEnd_toEndOf="@+id/et_lName"
                    app:layout_constraintStart_toStartOf="@+id/et_lName"
                    app:layout_constraintTop_toBottomOf="@+id/et_lName" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_16dp"
                    android:background="@drawable/stroke_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/mobile"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:paddingStart="@dimen/_12dp"
                    android:singleLine="true"
                    android:maxLength="10"
                    android:textColor="@color/black"
                    android:textColorHint="#808080"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sp_gender" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_dob"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_16dp"
                    android:background="@drawable/stroke_bg"
                    android:cursorVisible="false"
                    android:drawableEnd="@drawable/ic_calendar"
                    android:editable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center_vertical"
                    android:hint="@string/birth_date"
                    android:imeOptions="actionNone"
                    android:inputType="none"
                    android:paddingStart="@dimen/_12dp"
                    android:paddingRight="@dimen/_16dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="#808080"
                    android:textSize="@dimen/_16sp"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_mobile" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16dp"
                    android:background="@drawable/stroke_bg"
                    android:gravity="top"
                    android:hint="@string/address"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:minHeight="@dimen/_80dp"
                    android:paddingStart="@dimen/_12dp"
                    android:paddingTop="@dimen/_6dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="#808080"
                    android:textSize="@dimen/_16sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_dob" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/_20dp"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_btn_bg"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/submit"
                android:textColor="@color/white" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_face"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_btn_bg"
                android:fontFamily="@font/poppins_medium"
                android:text="Face Register"
                android:layout_marginLeft="@dimen/_12dp"
                android:textColor="@color/white"
                />
        </LinearLayout>






    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>